trying to solve share btn problem change the share-btn id to anything in index.html to display the btn

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="resumeBtn">
 
     <button id="editResume" style="display: none;">Edit</button>
-    <button id="shareLink" style="display: none;">Share</button>
+    <button id="generateInk" style="display: none;">Share</button>
   </div>
 
   <script src="script.js"></script>
